--- a/style.css
+++ b/style.css
@@ -442,8 +442,7 @@ background:rgba(18,30,51, 0.6)!important;
 border: none!important;
 color:#fff!important;
 }
-/*Cart - Checkout - Order - Cart Empty Page*/
-/*AWS Search Box Global*/
+/*AWS Search Box Global Base Style*/
 .aws-search-field {
 background:rgba(255,255,255, 0.3)!important;
 margin-bottom:36px!important;
