--- a/style.css
+++ b/style.css
@@ -299,51 +299,59 @@ text-align:center;
 .woocommerce-variation-price {display:none!important;}
 /*.woocommerce-Price-amount {display:none !important;}*/
 /*Image Borders*/
-.woocommerce-LoopProduct-link img {
-    background-color: #fff!important;
-    border-color: #dedede #bababa #aaa #bababa;
-    border-style: solid;
-    border-width: 1px;
+.related.products .woocommerce-LoopProduct-link img {
+   background-color: #fff!important;
+    border:none!important;
     padding-top: 20px;
     padding-bottom:20px;
-   -webkit-border-radius: 15px!important;
-    -moz-border-radius: 15px!important;
-    border-radius: 15px!important;
-   -khtml-border-radius: 15px!important;
-    -webkit-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    -moz-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    -khtml-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
     margin: auto;
-    margin-bottom:20px;
-    overflow: hidden;
+    width: 100%;
+    height:100%;
+}
+.woocommerce-LoopProduct-link img {
+   background-color: #fff!important;
+    border:none!important;
+    padding-top: 20px;
+    padding-bottom:20px;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    margin: auto;
     width: 100%;
     height:100%;
 }
 .product-category img {
     background-color: #fff!important;
-    border-color: #dedede #bababa #aaa #bababa;
-    border-style: solid;
-    border-width: 1px;
+    border:none!important;
     padding-top: 20px;
     padding-bottom:20px;
-   -webkit-border-radius: 15px!important;
-    -moz-border-radius: 15px!important;
-    border-radius: 15px!important;
-   -khtml-border-radius: 15px!important;
-    -webkit-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    -moz-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
-    -khtml-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444!important;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px rgba(000,000,000,0.5)!important;
     margin: auto;
-    margin-bottom:20px;
-    overflow: hidden;
     width: 100%;
     height:100%;
 }
 .woocommerce-product-gallery img {
+    background-color: #fff!important;
     border:none!important;
-    padding-bottom:10px;
+    padding-top: 20px;
+    padding-bottom:20px;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px rgba(000,000,000,0.5)!important;
+    margin: auto;
     width: 100%;
     height:100%;
 }
@@ -566,7 +574,7 @@ border-radius: 5px!important;
 .aws-container .aws-search-form .aws-search-field:focus,
 .aws-container .aws-search-form .aws-search-field:active {
 outline:none!important;
-background: rgba(0,25,51,0.3)!important;
+background: rgba(98,105,139, 0.3)!important;
 }
 /*End AWS erch Box*/
 /*Hide Cart Notice On Checkout*/
