--- a/style.css
+++ b/style.css
@@ -314,6 +314,9 @@ text-align:center;
     border-radius: 5px!important;
    -khtml-border-radius: 5px!important;
    -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
     margin: auto;
     width: 100%;
     height:100%;
@@ -328,6 +331,9 @@ text-align:center;
     border-radius: 5px!important;
    -khtml-border-radius: 5px!important;
    -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
     margin: auto;
     width: 100%;
     height:100%;
@@ -341,7 +347,10 @@ text-align:center;
     -moz-border-radius: 5px!important;
     border-radius: 5px!important;
    -khtml-border-radius: 5px!important;
-   -webkit-box-shadow: 0 4px 2px -2px rgba(000,000,000,0.5)!important;
+  -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
     margin: auto;
     width: 100%;
     height:100%;
@@ -355,7 +364,10 @@ text-align:center;
     -moz-border-radius: 5px!important;
     border-radius: 5px!important;
    -khtml-border-radius: 5px!important;
-   -webkit-box-shadow: 0 4px 2px -2px rgba(000,000,000,0.5)!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
     margin:auto!important;
     width: 100%;
     height:100%;
@@ -579,7 +591,7 @@ border-radius: 5px!important;
 .aws-container .aws-search-form .aws-search-field:focus,
 .aws-container .aws-search-form .aws-search-field:active {
 outline:none!important;
-background: rgba(000,000,000,0.5)!important;
+background: rgba(58,90,112,0.5)!important;
 }
 /*End AWS erch Box*/
 /*Hide Cart Notice On Checkout*/
