--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ background-color: #fff;
   font-weight: normal;
   font-style: normal;
 }
+/*Footer*/
+
+
 #masthead .top-bar {
 background-color:#292c2f;
 }
