--- a/style.css
+++ b/style.css
@@ -40,100 +40,400 @@ background-color: #fff;
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: "Raleway-Regular";
-  src: url("./fonts/Raleway-Regular.eot"); /* IE9 Compat Modes */
-  src: url("./fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./fonts/Raleway-Regular.svg") format("svg"), /* Legacy iOS */
-    url("./fonts/Raleway-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./fonts/Raleway-Regular.woff") format("woff"), /* Modern Browsers */
-    url("./fonts/Raleway-Regular.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: normal;
-  font-style: normal;
-}
 /*Footer*/
-.footer-basic-centered{
-	background-color: #222;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-	box-sizing: border-box;
-	width: 100%;
-	text-align: center;
-	font: normal 18px sans-serif;
-    padding: 45px;
-	margin-top: 80px;
+h1,h2,h3,h4,h5,h6{
+	margin:0;			   
+}	
+p{
+	margin:0;
 }
-.footer-basic-centered h4 {
-	font-family: "KaushanScript-Regular";
-padding:none;
-margin:none;
-text-align:center;	
+ul{
+	margin:0;
+	padding:0;
 }
-.footer-basic-centered .footer-company-logo{
-	color:  #f8f8f8;
-	padding:none;
-	margin:none;
-	font-size: 40px;
-	font-weight: 500;
-	margin: 0;
+label{
+	margin:0;
 }
-
-.footer-basic-centered .footer-company-name{
-	color:  #8f9296;
-	font-size: 14px;
-	font-family: "Lato-Regular";
-	margin: 0;
+/*-- main --*/
+.main{
+	padding:110px 0;
 }
-.footer-basic-centered .footer-company-name a:hover {
-color:#ccc;
+.footer {
+font-family: "Lato-Regular";
 }
-
-.footer-basic-centered .footer-links{
-	font-family: "Raleway-Regular";
-	font-weight: normal;
-	font-size:16px;
-	color:  #8f9296;
-	padding: 35px 0 23px;
-	margin: 0;
+.footer-grids{
+	background: #222;
+    padding: 3em 3em;
+}
+p.footer-gd {
+    color: #908F8F;
+    font-weight: 400;
+}
+.copy-right-grids .copy-left p {
+font-size: 13px;
+}
+p.footer-gd a:hover {
+	color: #6C7A89;
+}
+.footer{
+	float:left;
 }
 
-.footer-basic-centered .footer-links a{
-	padding:0px 5px;
-	display:inline-block;
-	text-decoration: none;
-	color: inherit;
+.footer h3{
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 32px;
+    font-family: 'Lato-Regular', sans-serif;
 }
-.footer-basic-centered .footer-links a:hover {
-	color:#ccc;
+.footer.one {
+    width: 37%;
+}
+p.adam{
+	float:right;
+	color:#6F6E6E !important;
+	font-size:13px !important;
+	margin-top:20px;
+}
+.footer.three {
+    width: 23%;
+}
+.footer.one p{
+	color:#908F8F;
+	line-height:2em;
+	font-size:14px;
+}
+.footer.two {
+    width: 23%;
+    margin: 0 8%;
+}
+.footer.two ul{
+	margin:0;
+	padding:0;
+}
+.footer.two ul li{
+	list-style-type:none;
+	display:block;
+    line-height: 1.5em;
+	font-size:14px;
+}
+.footer.two ul li a{
+color:#908F8F;	
+display:block;
+}
+.footer.two ul li a.fb {
+	background: url('./images/social2.png') no-repeat 0px 4px;  
+    padding: 10px 0 12px 52px;
+}
+.footer.two ul li a.fb1 {
+	background: url('./images/social1.png') no-repeat 0px 4px;
+    padding: 10px 0 12px 52px;
+}
+.footer.two ul li a.fb2 {
+    background: url('./images/social3.png') no-repeat 0px 4px;
+    padding: 10px 0 12px 52px;
+}
+.footer.two ul li a.fb3 {
+    background: url('./images/social4.png') no-repeat 0px 4px;
+    padding: 10px 0 12px 52px;
+}
+.footer.two ul li a.fb4 {
+    background: url('./images/social5.png') no-repeat 0px 4px;
+    padding: 10px 0 12px 52px;
+}
+.footer.three ul li {
+    list-style-type: none;
+    display: block;
+    color: #908F8F;
+    font-size: 14px;
+    line-height: 2.5em;
+}
+.footer.three ul li span {
+    display: block;
+}
+.footer.three ul li:nth-child(1) {
+    background: url('./images/icon2.png') no-repeat 0px 6px;
+    padding-left: 38px;
+}
+.footer.three ul li:nth-child(2) {
+    background: url('./images/icon3.png') no-repeat 0px 6px;
+    padding-left: 38px;
+}
+.footer.three ul li a {
+    background: url('./images/icon1.png') no-repeat 0px 6px;
+    padding-left: 38px;
+    display: block;
+	color:#908F8F;
+}
+.copy-right-grids {
+	padding: 20px 20px;
+    background: #211E1E;
+}
+.copy-left{
+	float:left;
+}
+.copy-right{
+	float:right;
+}
+.copy-right ul li {
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 0px;
+    padding: 0 12px;
+}
+.copy-right ul li a {
+    color: #908F8F;
+	font-size:1em;
+}
+.copy-right ul li:nth-child(1) {
+    border: none;
+}
+.footer.two ul li a.fb:hover {
+    background: url('./images/social3hover.png') no-repeat 0px 4px;
+}
+.footer.two ul li a.fb1:hover {
+    background: url('./images/social2hover.png') no-repeat 0px 4px;
+}
+.footer.two ul li a.fb2:hover {
+    background: url('./images/social4hover.png') no-repeat 0px 4px;
+}
+.footer.two ul li a.fb3:hover {
+    background: url('./images/social5hover.png') no-repeat 0px 4px;
+}
+.footer.two ul li a.fb4:hover {
+    background: url('./images/social1hover.png') no-repeat 0px 4px;
+}
+.footer.two ul li a:hover,.copy-right ul li a:hover,.footer.three ul li a:hover{
+	color:#6C7A89;
+}
+.footer.one a:hover {
+color:#6C7A89;
+}
+/*-- responsive media queries --*/
+
+@media (max-width: 1440px){
+	.content {
+		width: 73%;
+	}	
+}
+@media (max-width: 1366px){
+	.footer.one {
+		width: 38%;
 	}
-
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 600px) {
-
-	.footer-basic-centered{
-		padding: 35px;
+	.footer-grids {
+		padding: 2.5em 2.5em;
+	}	
+}
+@media (max-width: 1280px){
+	.main {
+		padding: 80px 0;
+	}	
+}
+@media (max-width: 1080px){
+	.content {
+		width: 80%;
 	}
-
-	.footer-basic-centered .footer-company-logo{
-		font-size: 32px;
+	.footer h3 {
+		font-size: 19px;
 	}
-
-	.footer-basic-centered .footer-company-name{
-		font-size: 12px;
+	.copy-left {
+		float: none;
+		text-align: center;
+		margin-bottom: 15px;
 	}
-	.footer-basic-centered .footer-links p {
-	list-style: none;
+	.copy-right {
+		float: none;
+		text-align: center;
 	}
-
-	.footer-basic-centered .footer-links{
-		font-size: 14px;
-		padding: 20px 0 20px;
+	.footer.two ul li a.fb2 ,.footer.two ul li a.fb,.footer.two ul li a.fb1,.footer.two ul li a.fb3,.footer.two ul li a.fb4{
+		padding: 10px 0 10px 38px;
 	}
-
-	.footer-basic-centered .footer-links a{
-		line-height: 1.8;
+	.footer h3 {
+		font-size: 18px;
+	}
+	.main h1 {
+		font-size: 34px;
+	}	
+}
+@media (max-width: 1024px){
+	.footer-grids {
+		padding: 2em 2em;
+	}
+	.content {
+		width: 82%;
+	}
+	.main h1 {
+		font-size: 33px;
+		margin-bottom: 55px;
 	}
 }
+@media (max-width: 991px){
+	.footer.two {
+		width: 27%;
+		margin: 0 5%;
+	}
+	.footer.three {
+		width: 25%;
+	}	
+}
+@media (max-width: 800px){
+	.content {
+		width: 88%;
+	}
+	.footer.one p {
+		font-size: 13px;
+	}
+	.footer.two ul li {
+		font-size: 13px;
+	}
+	.footer.three ul li {
+		font-size: 13px;
+	}	
+	.footer.three ul li:nth-child(1),.footer.three ul li:nth-child(2),.footer.three ul li a{
+		padding-left: 32px;	
+	}
+	.footer h3 {
+		font-size: 16px;
+	}
+}
+@media (max-width: 768px){
+	.content {
+		width: 90%;
+	}
+	p.footer-gd {
+		font-size: 13px;
+	}	
+	.main {
+		padding: 135px 0;
+	}
+	.main h1 {
+		margin-bottom: 120px;
+	}
+}
+@media (max-width: 736px){
+	.main {
+		padding: 80px 0;
+	}
+	.main h1 {
+		margin-bottom: 60px;
+	}
+	.footer.one {
+		width: 35%;
+	}
+	.footer.two {
+		width: 29%;
+		margin: 0 4%;
+	}
+	.footer.three {
+		width: 27%;
+	}	
+}
+@media (max-width: 667px){
+	.footer.one {
+		width: 100%;
+	}
+	.footer.two {
+		width: 48%;
+		margin: 0 4% 0 0;
+	}	
+	.footer.three {
+		width: 48%;
+	}
+	.footer.one {
+		margin-bottom: 40px;
+	}
+}
+@media (max-width: 640px){
+	.main h1 {
+		font-size: 30px;
+	}	
+	.footer-grids {
+		padding: 2.5em 2.5em;
+	}
+}
+@media (max-width: 600px){
+	.main {
+		padding: 65px 0;
+	}
+	.main h1 {
+		font-size: 28px;
+		margin-bottom: 45px;
+	}
+}
+@media (max-width: 568px){
+	
+}
+@media (max-width: 480px){
+	.footer-grids {
+		padding: 1.5em 1.5em;
+	}
+	.copy-right-grids {
+		padding: 20px 10px;
+	}
+	.copy-right ul li {
+		padding: 0 10px;
+	}
+	p.footer-gd {
+		line-height: 1.8em;
+	}	
+	p.adam {
+		margin-top: 9px;
+	}
+	.main h1 {
+		font-size: 26px;
+		margin-bottom: 38px;
+	}
+}
+@media (max-width: 414px){
+.footer.two {
+    width: 100%;
+}
+.footer.three {
+    width: 100%;
+}
+.footer h3 {
+    margin-bottom: 18px;
+}
+.footer.one {
+    margin-bottom: 0;
+}
+.footer.two {
+    width: 100%;
+    margin: 30px 0;
+}
+.footer-grids {
+    padding: 2em 2em;
+}
+.main h1 {
+    font-size: 25px;
+}
+.copy-right ul li {
+    line-height: 1.8em;
+}	
+}
+@media (max-width: 384px){
+	
+}
+@media (max-width: 375px){
+	.main h1 {
+		font-size: 23px;
+	}
+	.main {
+		padding: 60px 0;
+	}	
+}
+@media (max-width: 320px){
+	.main h1 {
+		font-size: 21px;
+	}
+	.footer-grids {
+		padding: 1em 1em;
+	}
+	.main {
+		padding: 50px 0;
+	}	
+}
+
 /*End Footer*/
 #masthead .top-bar {
 background-color:#222;
