--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ color:#6C7A89;
 background-color:#222;
 }
 .site-header .branding .title {
-font-size: 65px;
+font-size: 60px;
 }
 /*Widget Area*/
 .widget-area p {
@@ -485,7 +485,6 @@ padding-bottom: 10px;
 padding-bottom:20px;
 padding-right:0px;
 padding-left:0px;
-
 text-align:center;
 }
 #cart p {
@@ -722,16 +721,42 @@ border: 1px solid #949494;
 .woocommerce-variation-price {display:none!important;}
 /*.woocommerce-Price-amount {display:none !important;}*/
 /*Image Borders*/
-
-
 .related.products .woocommerce-LoopProduct-link img {
-  
+   background-color: #fff!important;
+    border:none!important;
+    padding-top: 20px;
+    padding-bottom:20px;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    margin: auto;
+    width: 100%;
+    height:100%;
 }
 .woocommerce-LoopProduct-link img {
-  
+   background-color: #fff!important;
+    border:none!important;
+    padding-top: 20px;
+    padding-bottom:20px;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    margin: auto;
+    width: 100%;
+    height:100%;
 }
 .product-category img {
-   background-color: #fff!important;
+    background-color: #fff!important;
     border:none!important;
     padding-top: 20px;
     padding-bottom:20px;
@@ -748,7 +773,21 @@ border: 1px solid #949494;
     height:100%;
 }
 .woocommerce-product-gallery img {
-   
+    background-color: #fff!important;
+    border:none!important;
+    padding-top: 20px;
+    padding-bottom:20px;
+   -webkit-border-radius: 5px!important;
+    -moz-border-radius: 5px!important;
+    border-radius: 5px!important;
+   -khtml-border-radius: 5px!important;
+   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
+    margin:auto!important;
+    width: 100%;
+    height:100%;
 }
 /*Category Page Titles and descriptions*/
 /*Hide Result Count on pages*/
@@ -933,7 +972,7 @@ display: none !important;
 /*Footer search box*/
 .footer.one .aws-container {
 max-width:98%;
-padding-right:10px;	
+padding-right:10px; 
 }
 /*AWS Search Box Global Base Style*/
 .aws-container .aws-search-form .aws-search-field::placeholder {
