--- a/style.css
+++ b/style.css
@@ -93,12 +93,6 @@ p.footer-gd a:hover {
 .footer.one {
     width: 37%;
 }
-p.adam{
-	float:right;
-	color:#6F6E6E !important;
-	font-size:13px !important;
-	margin-top:20px;
-}
 .footer.three {
     width: 23%;
 }
@@ -465,8 +459,6 @@ width:100%!important;
 height:100%!important;
 }
 .map {
-padding-top:22px;
-margin-top:22px;
 width:100%;
 height:100%; 
 }
@@ -480,7 +472,7 @@ text-align: center;
 text-align:center;
 }
 /*Related Products Title*/
-h2 {
+.related.products h2 {
 padding-bottom: 10px;
 }
 .woocommerce {
@@ -512,7 +504,7 @@ text-align: center;
 .wpcf7 input[type="submit"]{ 
 padding: 5px;
 width: 130px;
- background: -moz-linear-gradient(
+background: -moz-linear-gradient(
         top,
         #a3a3a3 0%,
         #3b3b3b 50%,
@@ -579,8 +571,7 @@ background: -moz-linear-gradient(
 }
 .wpcf7 input[type="text"]{ 
 margin-top:5px;
-width: 100%;
- background:rgba(255,255,255, 0.3)!important;
+width: 100%;background:rgba(255,255,255, 0.3)!important;
 border: 1px solid #949494;
     -moz-box-shadow:
         0px 1px 3px rgba(000,000,000,0.5),
