--- a/style.css
+++ b/style.css
@@ -510,9 +510,32 @@ text-align: center;
 color:#6C7A89;  
 }
 /*Contact Form and other pages*/
+.display {
+width: 100%;
+height: 100%;
+background-color: #f5f5f5; 
+padding: none;   
+}
+.display h2,
+.display h4,
+.display h3,
+.display p {
+text-align: center;
+padding:0px 20px 0px 20px;   
+}
+.display h4 a:hover,
+.display p a:hover {
+color:#6C7A89; 
+} 
+#page {
+width: 100%;
+height: 100%;
+  
+padding:0px 20px 0px 20px;   
+}
+#page h2,
 #page h4,
 #page h3,
-#page h2,
 #page p {
 text-align: center;
 }
@@ -520,9 +543,11 @@ text-align: center;
 #page p a:hover {
 color:#6C7A89;  
 }
-.wpcf7 input[type="submit"]{ 
+.wpcf7 input[type="submit"]{
+margin-top:5px; 
 padding: 5px;
 width: 130px;
+float:left;
 background: -moz-linear-gradient(
         top,
         #a3a3a3 0%,
@@ -675,7 +700,9 @@ border: 1px solid #949494;
   -moz-border-radius: 5px!important; 
   border-radius: 5px!important; 
 }
-.select { 
+.select {
+margin-top:5px; 
+float:left;
 padding: 5px;
  background:rgba(255,255,255, 0.3)!important;
 border: 1px solid #949494;
@@ -716,7 +743,11 @@ border: 1px solid #949494;
      color:#6C7A89!!important;
 }
 /*Hide Variation Price*/
-.woocommerce-variation-price {display:none!important;}
+.woocommerce-variation-price {
+float:left!important;
+margin-top:6px;
+margin-right:5px;
+}
 /*.woocommerce-Price-amount {display:none !important;}*/
 /*Image Borders*/
 .related.products .woocommerce-LoopProduct-link img {
