--- a/style.css
+++ b/style.css
@@ -453,17 +453,11 @@ color:#404040;
 .widget-area a:hover {
 color:#6C7A89!important; 
 }
-/*Gallery*/
 .gallery {
-text-align:center!important;
-margin-top:20px!important;
-}
-.gallery img {
-margin-top:22px!important;
-width:100%!important;
-height:100%!important;
+ padding:8px 0px 10px 0px;      
 }
 .map {
+padding:20px 0px 10px 0px;   
 width:100%;
 height:100%; 
 }
@@ -483,7 +477,6 @@ padding-bottom: 10px;
 .woocommerce {
 font-family: "Lato-Regular";
 }
-
 .woocommerce tr td a:hover,
 .woocommerce ul li a:hover,
 .woocommerce p a:hover,
