--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ color:#6C7A89;
 	}	
 }
 /*End Footer*/
+/*Open Hours*/
 table tr.mbhi-is-current td{
    font-weight:bold;
    background-color:rgba(63, 127, 191,0.3);
@@ -723,10 +724,7 @@ border: 1px solid #949494;
 /*Woocommerce Styles*/
 /********************SHOP PAGE LAYOUT ************************************/
 /*.woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
-    border:2px solid rgba(18,30,51, 0.1);
-    border-radius: 10px;
-
-}*/
+ padding-top:10px!important;
 /*Top of all pages breadcrumb*/
 .woocommerce-breadcrumb {
     padding: none!important;
@@ -748,72 +746,52 @@ margin-right:5px;
 /*.woocommerce-Price-amount {display:none !important;}*/
 /*Image Borders*/
 .related.products .woocommerce-LoopProduct-link img {
-   background-color: #fff!important;
-    border:none!important;
-    padding-top: 20px;
-    padding-bottom:20px;
-   -webkit-border-radius: 5px!important;
-    -moz-border-radius: 5px!important;
-    border-radius: 5px!important;
-   -khtml-border-radius: 5px!important;
-   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    margin: auto;
+  border: 10px solid rgba(0,31,63,0.3)!important;
+  padding: 10px!important;
+  -webkit-border-radius: 10px!important;
+   -moz-border-radius: 10px!important;
+    border-radius: 10px!important;
+   -khtml-border-radius: 10px!important;
+   margin: auto;
     width: 100%;
     height:100%;
+
 }
 .woocommerce-LoopProduct-link img {
-   background-color: #fff!important;
-    border:none!important;
-    padding-top: 20px;
-    padding-bottom:20px;
-   -webkit-border-radius: 5px!important;
-    -moz-border-radius: 5px!important;
-    border-radius: 5px!important;
-   -khtml-border-radius: 5px!important;
-   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    margin: auto;
+   border: 10px solid rgba(0,31,63,0.3)!important;
+  padding: 10px!important;
+  -webkit-border-radius: 10px!important;
+   -moz-border-radius: 10px!important;
+    border-radius: 10px!important;
+   -khtml-border-radius: 10px!important;
+   margin: auto;
     width: 100%;
     height:100%;
+
 }
 .product-category img {
-    background-color: #fff!important;
-    border:none!important;
-    padding-top: 20px;
-    padding-bottom:20px;
-   -webkit-border-radius: 5px!important;
-    -moz-border-radius: 5px!important;
-    border-radius: 5px!important;
-   -khtml-border-radius: 5px!important;
-  -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    margin: auto;
+  border: 10px solid rgba(0,31,63,0.3)!important;
+  padding: 10px!important;
+  -webkit-border-radius: 10px!important;
+   -moz-border-radius: 10px!important;
+    border-radius: 10px!important;
+   -khtml-border-radius: 10px!important;
+   margin: auto;
     width: 100%;
     height:100%;
+
 }
 .woocommerce-product-gallery img {
-    background-color: #fff!important;
-    border:none!important;
-    padding-top: 20px;
-    padding-bottom:20px;
-   -webkit-border-radius: 5px!important;
-    -moz-border-radius: 5px!important;
-    border-radius: 5px!important;
-   -khtml-border-radius: 5px!important;
-   -webkit-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -moz-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-   -khtml-box-shadow: 0 4px 2px -2px  rgba(000,000,000,0.5)!important;
-    margin:auto!important;
+  border: 10px solid rgba(0,31,63,0.3)!important;
+  padding: 10px!important;
+  -webkit-border-radius: 10px!important;
+   -moz-border-radius: 10px!important;
+    border-radius: 10px!important;
+   -khtml-border-radius: 10px!important;
+   margin: auto;
     width: 100%;
     height:100%;
+
 }
 /*Category Page Titles and descriptions*/
 /*Hide Result Count on pages*/
@@ -823,10 +801,12 @@ display: none!important;
 .term-description h2 {
 display:none; 
 }
-.term-description h4,
+.term-description h4 {
+text-align:center;
+}
 .term-description p  {
 text-align:center;
-padding:20px;
+padding-bottom:15px;
 }
 /********************END SHOP PAGE LAYOUT *************************************/
 /*Buttons*/
@@ -1043,7 +1023,7 @@ border-radius: 5px!important;
 .aws-container .aws-search-form .aws-search-field:focus,
 .aws-container .aws-search-form .aws-search-field:active {
 outline:none!important;
-background: rgba(58,90,112,0.5)!important;
+background: rgba(0,31,63,0.3)!important;
 }
 /*End AWS erch Box*/
 /*Hide Cart Notice On Checkout*/
