--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ text-align:center;
 }
 /*Related Products Title*/
 .related.products h2 {
-padding-bottom: 10px;
+padding-bottom: 15px;
 }
 .woocommerce {
 font-family: "Lato-Regular";
@@ -781,20 +781,31 @@ margin-right:5px;
     height:100%;
 
 }
-.woocommerce-product-gallery img {
+body.single.single-product img.attachment-shop_single.size-shop_single.wp-post-image {
   border: 10px solid rgba(0,31,63,0.3)!important;
   padding: 10px!important;
   -webkit-border-radius: 10px!important;
-   -moz-border-radius: 10px!important;
-    border-radius: 10px!important;
+  -moz-border-radius: 10px!important;
+  border-radius: 10px!important;
    -khtml-border-radius: 10px!important;
-   margin: auto;
-    width: 100%;
-    height:100%;
-
+  margin: auto;
+  width: 100%;
+  height:100%;
 }
+/*.woocommerce-product-gallery img {
+  border: 10px solid rgba(0,31,63,0.3)!important;
+  padding: 10px!important;
+  -webkit-border-radius: 10px!important;
+  -moz-border-radius: 10px!important;
+  border-radius: 10px!important;
+   -khtml-border-radius: 10px!important;
+  margin: auto;
+  width: 100%;
+  height:100%;
+
+}*/
 /*Category Page Titles and descriptions*/
-/*Hide Result Count on pages*/
+/*Hide Result Count on Pages*/
 p.woocommerce-result-count {
 display: none!important;
 }
@@ -978,9 +989,6 @@ display: none !important;
 /*Footer search box*/
 .footer.one .aws-container {
 max-width:96%;
-}
-.footer.one .aws-container .aws-search-form .aws-search-field {
-
 }
 /*AWS Search Box Global Base Style*/
 .aws-container .aws-search-form .aws-search-field::placeholder {
